Sidebar Alignment fix #4260
Indent vertical widget alignment

--- a/loleaflet/css/jssidebar.css
+++ b/loleaflet/css/jssidebar.css
@@ -151,7 +151,7 @@
 
 #table-indentfieldbox {
 	position: relative;
-	left: -20px;
+	left: -13px;
 }
 
 #table-box4.sidebar.jsdialog.vertical {
